<resources>
    <string name="app_name">SafeBox</string>
    <string name="no_app_found">No app for opening this type of file is installed.</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_app_password">App Password</string>
    <string name="title_activity_debugconsole">Debug Console</string>
    <string name="menu_test">Test</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_more">More…</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_rename">Rename</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name="btn_encrypt_file">Encrypt file</string>
    <string name="btn_decrypt">Decrypt</string>
    <string name="btn_decrypt_file">Decrypt and share</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="sharing_to">Sharing to…</string>
    <string name="please_wait">Please wait.</string>
    <string name="reading_files_please_wait">Reading files, please wait.</string>
    <string name="encrypting_file">Encrypting file…</string>
    <string name="decrypting_file">Decrypting file…</string>
    <string name="press_back_again_to_quit">Press back button again to quit this app.</string>
    <string name="operation_cancelled">Operation cancelled.</string>
    <string name="no_app_to_share">No apps to share.</string>
    <string name="encrypt_new_item">Encrypt new item...</string>
    <string name="enter_app_password">Enter App Password</string>
    <string name="enter_app_password_error">password incorrect, please try again.</string>
    <string name="enter_your_app_password">Enter app password</string>
    <string name="enter_existing_app_password">Enter existing app password</string>
    <string name="enter_new_app_password">enter new app password</string>
    <string name="confirm_new_app_password">confirm new app password</string>
    <string name="menu_view_item">View…</string>
    <string name="menu_share_item_encrypted">Share</string>
    <string name="menu_share_item_decrypted">Decrypt and share…</string>
    <string name="menu_change_encrypting_password">Change encrypting password…</string>
    <string name="menu_rename_item">Rename…</string>
    <string name="menu_delete_item">Delete…</string>
    <string name="dlg_title_rename_item">Rename Item</string>
    <string name="dlg_title_delete_item">Delete Item</string>
    <string name="dlg_msg_delete_item">Do you really want to permanently delete the following item?\n\nWARNING:\nDeleted item are NOT recoverable.</string>
    <string name="enc_enter_password">Enter Password</string>
    <string name="enc_encrypting_password">Encrypting Password</string>
    <string name="enc_confirm_your_password">Confirm your password</string>
    <string name="enc_decrypting_password">Decrypting Password</string>
    <string name="enc_enter_decrypting_password_error">Decrypting failed, possibly incorrect password, please try again.</string>
    <string name="enc_msg_encrypting_password">Please enter a password to encrypt this file.</string>
    <string name="enc_msg_decrypting_password">Please enter the password to decrypt this file.</string>
    <string name="enc_warning_encrypting_password">Warning: if you forget this password, your encrypted file will be unrecoverable and as good as gone unless you have a backup somewhere else. so please choose your password carefully.</string>
    <string name="enc_title_encrypting_file">Encrypting File</string>
    <string name="enc_msg_encrypting_success">File successfully encrypted.</string>
    <string name="enc_msg_encrypting_cancelled">File encryption cancelled.</string>
    <string name="enc_msg_encrypting_failed">Error encrypting the file.</string>
    <string name="imp_title_import_decrypt">Import/Decrypt</string>
    <string name="imp_radio_save_in_library">Save in library</string>
    <string name="imp_radio_decrypt_and_open_in">Decrypt and open in…</string>
    <string name="imp_msg_import_failed">Failed to import/decrypt the file.</string>
    <string name="imp_msg_import_success">File successfully imported.</string>
    <string name="imp_msg_invalid_file">This is not a valid SafeBox encrypted file.</string>
    <string name="dlg_title_change_encrypting_password">Change Encrypting Password</string>
    <string name="dlg_hint_enter_original_password">Enter the original password</string>
    <string name="dlg_hint_enter_new_password">Enter the new password</string>
    <string name="dlg_hint_confirm_new_password">Confirm new password</string>
    <string name="dlg_msg_change_encrypting_password_success">File encrypting password successfuly changed.</string>
    <string name="dlg_msg_change_encrypting_password_failed">Failed to change the encrypting password, please try again later.</string>
    <string name="itemlist_thumbnail">Thumbnail</string>
    <string name="itemlist_image">Image</string>
    <string name="itemlist_default_text">item name</string>
    <string name="itemlist_nothing_here">There is nothing here!</string>
    <string name="itemlist_empty_folder">Empty Folder.</string>
    <string name="dlg_title_success">Success</string>
    <string name="dlg_title_error">Error</string>
    <string name="dlg_title_new_app_password">New App Password</string>
    <string name="dlg_title_change_app_password">Change App Password</string>
    <string name="dlg_msg_new_app_password_success">New app password successfully created,</string>
    <string name="dlg_msg_new_app_password_error">Unable to save the app password, please launch the app and try again.</string>
    <string name="dlg_msg_new_app_password_cancel">App password creation cancelled.</string>
    <string name="dlg_msg_change_app_password_success">Your app password has been successfully changed.</string>
    <string name="dlg_msg_change_app_password_cancel">App password change cancelled.</string>
    <string name="dlg_msg_change_app_password_incorrect">You have entered an incorrect existing app password, please try again.</string>
    <string name="dlg_msg_change_app_password_error">Error occurs when changing the app password, please try again.</string>
    <string name="dlg_msg_initialization_error">Error initializing app, please restart the app and try again.</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="in_january">in January</string>
    <string name="in_february">in February</string>
    <string name="in_march">in March</string>
    <string name="in_april">in April</string>
    <string name="in_may">in May</string>
    <string name="in_june">in June</string>
    <string name="in_july">in July</string>
    <string name="in_august">in August</string>
    <string name="in_september">in September</string>
    <string name="in_october">in October</string>
    <string name="in_november">in November</string>
    <string name="in_december">in December</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday_letter">M</string>
    <string name="tuesday_letter">T</string>
    <string name="wednesday_letter">W</string>
    <string name="thursday_letter">T</string>
    <string name="friday_letter">F</string>
    <string name="saturday_letter">S</string>
    <string name="sunday_letter">S</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="seconds_raw">seconds</string>
    <string name="minutes_raw">minutes</string>
    <string name="hours_raw">hours</string>
    <string name="days_raw">days</string>
    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="in_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="in_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="in_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="in_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="in_weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="in_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="in_years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="seconds_before">
        <item quantity="one">%d second before</item>
        <item quantity="other">%d seconds before</item>
    </plurals>
    <plurals name="minutes_before">
        <item quantity="one">%d minute before</item>
        <item quantity="other">%d minutes before</item>
    </plurals>
    <plurals name="hours_before">
        <item quantity="one">%d hour before</item>
        <item quantity="other">%d hours before</item>
    </plurals>
    <plurals name="days_before">
        <item quantity="one">%d day before</item>
        <item quantity="other">%d days before</item>
    </plurals>
    <plurals name="weeks_before">
        <item quantity="one">%d week before</item>
        <item quantity="other">%d weeks before</item>
    </plurals>
    <plurals name="months_before">
        <item quantity="one">%d month before</item>
        <item quantity="other">%d months before</item>
    </plurals>
    <string name="debug_console">Debug Console</string>
</resources>