<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.smttcn.myapplication.MainActivity">

    <item
        android:id="@+id/popupmenu_view"
        android:orderInCategory="10"
        android:title="@string/menu_view_item"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/popupmenu_share_encrypt"
        android:orderInCategory="20"
        android:title="@string/menu_share_item_encrypted"
        app:showAsAction="always" />

    <item
        android:id="@+id/popupmenu_share_decrypt"
        android:orderInCategory="30"
        android:title="@string/menu_share_item_decrypted"
        app:showAsAction="always" />

    <item
        android:id="@+id/popupmenu_change_encrypting_password"
        android:orderInCategory="40"
        android:title="@string/menu_change_encrypting_password"
        app:showAsAction="always" />

    <item
        android:id="@+id/popupmenu_rename_item"
        android:orderInCategory="50"
        android:title="@string/menu_rename_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/popupmenu_delete_item"
        android:orderInCategory="60"
        android:title="@string/menu_delete_item"
        app:showAsAction="always" />

</menu>
