<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.smttcn.myapplication.MainActivity">

    <item
        android:id="@+id/menu_visible"
        android:orderInCategory="90"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_visible_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="90"
        android:title="@string/menu_refresh"
        android:icon="@drawable/icon_refresh_light"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_debug_console"
        android:orderInCategory="101"
        android:title="@string/debug_console"
        android:icon="@drawable/ic_debug_white_24dp"
        app:showAsAction="always" />

</menu>
