<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/original_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        android:text=""
        android:hint="@string/dlg_hint_enter_original_password"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/customEntry"
        tools:ignore="Autofill,HardcodedText,LabelFor"
        />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        android:text=""
        android:hint="@string/dlg_hint_enter_new_password"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/customEntry"
        tools:ignore="Autofill,HardcodedText,LabelFor"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        android:text=""
        android:hint="@string/dlg_hint_confirm_new_password"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/customEntry"
        tools:ignore="Autofill,HardcodedText,LabelFor"
        />

</LinearLayout>