<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smttcn.safebox.ui.main.EncryptingActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0.7"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_font_size"
                android:text="@string/enc_msg_encrypting_password"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                android:textSize="@dimen/activity_font_size"
                android:text="@string/enc_warning_encrypting_password"
                android:textColor="#FF0000" />

            <EditText
                android:id="@+id/encrypting_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/enc_encrypting_password"
                android:imeOptions="actionNext"

                android:inputType="textPassword"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:selectAllOnFocus="true"
                android:textColor="#333"
                android:textSize="@dimen/customEntry"
                tools:ignore="Autofill,HardcodedText,LabelFor" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/enc_confirm_your_password"
                android:imeOptions="actionDone"

                android:inputType="textPassword"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:selectAllOnFocus="true"
                android:textColor="#333"
                android:textSize="@dimen/customEntry"
                tools:ignore="Autofill,HardcodedText,LabelFor" />

            <Button
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:enabled="false"
                android:text="@string/btn_encrypt_file"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:enabled="true"
                android:text="@string/btn_cancel"
                android:layout_gravity="center_horizontal"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/encryptingActivityProgressBarContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#72000000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">


            <TextView
                android:id="@+id/progressBarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_wait"
                android:gravity="center_horizontal"
                android:textSize="@dimen/dialog_alert_font_size"
                android:textColor="@color/colorWhite"
                />

            <androidx.core.widget.ContentLoadingProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
