<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/itemlist_height"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_background"
        android:layout_gravity="top"
        android:layout_width="@dimen/itemlist_thumbnail_width"
        android:layout_height="@dimen/itemlist_thumbnail_height"
        android:layout_marginTop="@dimen/itemlist_thumbnail_margin_top"
        android:layout_marginStart="@dimen/itemlist_thumbnail_margin_start"
        android:layout_marginEnd="@dimen/itemlist_thumbnail_margin_end"
        android:contentDescription="@string/itemlist_thumbnail" />

    <ImageView
        android:id="@+id/item_thumbnail"
        android:layout_gravity="top"
        android:layout_width="@dimen/itemlist_thumbnail_width"
        android:layout_height="@dimen/itemlist_thumbnail_height"
        android:layout_marginTop="@dimen/itemlist_thumbnail_margin_top"
        android:layout_marginStart="@dimen/itemlist_thumbnail_margin_start"
        android:layout_marginEnd="@dimen/itemlist_thumbnail_margin_end"
        android:contentDescription="@string/itemlist_thumbnail" />

    <TextView
        android:id="@+id/item_name"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/itemlist_thumbnail_margin_end"
        android:layout_marginEnd="@dimen/popupmenu_width"
        android:layout_marginTop="@dimen/itemlist_filename_margin_top"
        android:background="@android:color/transparent"
        android:singleLine="true"
        android:text="@string/itemlist_default_text"
        android:textSize="@dimen/itemlist_textsize" />

    <TextView
        android:id="@+id/item_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/itemlist_thumbnail_margin_end"
        android:layout_marginEnd="@dimen/popupmenu_width"
        android:layout_marginTop="@dimen/itemlist_filesize_margin_top"
        android:background="@android:color/transparent"
        android:singleLine="true"
        android:text="@string/itemlist_default_text"
        android:textSize="@dimen/itemlist_textsize_sub" />

    <ImageButton
        android:id="@+id/popup_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_more"
        android:src="@drawable/ic_action_more_vert_gray_24dp" />

    <View
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/itemlist_thumbnail_margin_end"
        android:layout_marginEnd="@dimen/popupmenu_width"
        android:background="@color/colorDivider" />

</FrameLayout>